# SJTU-Canvas-Helper

./: .all-contributorsrc  .codespellrc  .gitignore  CONTRIBUTING.md  LICENSE  README.md  eslint.config.js  index.html  makefile  package-lock.json  package.json  vite.config.ts  zizmor.yml
.github/: dependabot.yml
.github/workflows/: android_build.yml  android_release.yml  code_spell.yml  contributors.yml  deploy-website.yml  e2e.yml  (+6 more)
android/: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  FEATURES.md  IMPLEMENTATION_SUMMARY.txt  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
e2e-tests/: package.json
plugins/: test.applescript
script/: bump_version.py  install.bat  install_mac.sh
scripts/: mcp-proxy.mjs
src/: App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.config/: nextest.toml
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/app/: annual.rs  basic.rs  cache.rs  constants.rs  jbox.rs  mod.rs  video.rs
src-tauri/src/canvas_agent/: mod.rs
src-tauri/src/client/: ai.rs  annual.rs  basic.rs  common.rs  constants.rs  debug.rs  jbox.rs  mod.rs  video.rs
src-tauri/src/client/file_parser/: docx.rs  mod.rs  pdf.rs
src-tauri/src/client/llm/: chat.rs  mod.rs  model.rs
src-tauri/src/error/: mod.rs
src-tauri/src/mcp/: mod.rs
src-tauri/src/model/: mod.rs
src-tauri/src/utils/: file.rs  json.rs  mod.rs  time.rs
website/: README.md  en.html  index.html  package.json  vite.config.ts
(+127 files in other folders)
