[package]
name = "sjtu_canvas_helper"
version = "1.3.2"
description = "SJTU Canvas Helper"
authors = ["Okabe"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
    "dialog-all",
    "updater",
    "process-relaunch",
    "shell-open",
    "devtools",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11.24", features = ["cookies", "multipart"] }
thiserror = "1.0.57"
tokio = { version = "1.35.1", features = ["full"] }
lazy_static = "1.4.0"
tracing = "0.1"
tracing-subscriber = "0.3"
xlsxwriter = "0.6.0"
select = "0.6.0"
md-5 = "0.10.6"
base64 = "0.22.0"
warp = "0.3.6"
warp-reverse-proxy = "1.0.0"
regex = "1.10.3"
chrono = "0.4.38"
bytes = "1.6.0"
bardecoder = "0.5.0"
image = "0.24"
[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
